--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>com.yet.spring</groupId>
     <artifactId>com.yet.spring.core</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <spring.version>4.3.10.RELEASE</spring.version>
+        <junit.version>4.12</junit.version>
+        <aspectj.version>1.8.12</aspectj.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -22,12 +30,6 @@
     </build>
     <name>Spring Basics Course Project</name>
     <description>The project created throughout the course 'Spring Framework - The Basics'</description>
-
-    <properties>
-        <java.version>1.8</java.version>
-        <spring.version>4.3.10.RELEASE</spring.version>
-        <junit.version>4.12</junit.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -50,7 +52,11 @@
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
