--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring.version>4.3.10.RELEASE</spring.version>
+        <spring.version>4.3.12.RELEASE</spring.version>
         <junit.version>4.12</junit.version>
-        <aspectj.version>1.8.12</aspectj.version>
+        <aspectj.version>1.8.9</aspectj.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
@@ -24,10 +25,12 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <compilerVersion>${java.version}</compilerVersion>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
     <name>Spring Basics Course Project</name>
     <description>The project created throughout the course 'Spring Framework - The Basics'</description>
 
