--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <spring.version>4.3.12.RELEASE</spring.version>
         <junit.version>4.12</junit.version>
         <aspectj.version>1.8.9</aspectj.version>
+        <mockito.version>2.11.0</mockito.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -64,6 +65,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
