--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
     <properties>
         <java.version>1.8</java.version>
         <spring.version>4.3.12.RELEASE</spring.version>
-        <junit.version>4.12</junit.version>
         <aspectj.version>1.8.9</aspectj.version>
+        <derby.version>10.13.1.1</derby.version>
+        <junit.version>4.12</junit.version>
         <mockito.version>2.11.0</mockito.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -60,6 +61,11 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>${derby.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
